--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
     background: #1C1C1C;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,7 +26,6 @@ img {
 
 main {
     max-width: 375px;
-    max-height: 612px;
     background: #fff;
 
 }
@@ -34,6 +33,12 @@ main {
     width: 100%;
     border: .5px solid lightgray;
 }
+.post-separator {
+    width: 100%;
+    border: .5px solid lightgray;
+    margin-bottom: 2em 0;
+}
+
 .container {
     margin: 0 auto;
     background: #fff;
@@ -59,6 +64,12 @@ p {
 }
 
 /* Post user */
+.post-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
 
 .post-user {
     display: flex;
@@ -84,7 +95,7 @@ p {
 /* Post */
 
 .painting-post {
-    max-width: 375px;
+    max-width: 100%;
 }
 
 /* Icons */
@@ -107,6 +118,16 @@ p {
 .icon svg {
     fill: rgb(7,7,7);
 
+}
+
+.red-icon path {
+    fill: rgb(255, 0, 0);
+    stroke: rgb(255, 0, 0);
+}
+
+.reg-icon path {
+    fill: #fff;
+    stroke: rgb(7, 7, 7);
 }
 
 
